<resources>
    <string name="app_name">Konna</string>
    <string name="settings">App settings</string>
    <string name="about">About the app</string>
    <string name="food_fragment_heading">Food &amp; Drinks</string>
    <string name="others_fragment_heading">Others</string>
    <string name="fashion_fragment_heading">Fashion</string>
    <string name="food_and_drinks">Food</string>
    <string name="fashion">Fashion</string>
    <string name="misc">Others</string>
    <string name="gadgets_fragment_heading">Gadgets</string>
    <string name="orders">Orders</string>
    <string name="login_fragment_heading">Login</string>
    <string name="register_fragment_heading">Sign up</string>
    <string name="register_instead"><u>Create a new account</u></string>
    <string name="reset_password"><u>Forgot your password? Reset it</u></string>
    <string name="confirm_password">Confirm password</string>
    <string name="login_instead">Already have an account? Login instead</string>
    <string name="logout">Logout</string>
    <string name="page_heading">%1$s</string>
    <string name="close">Close</string>
    <string name="account">Account</string>
    <string name="content_description_create_store_image">cartoon character carry food stuff</string>
    <string name="sell_on_konna">Sell on Konna</string>
    <string name="sell_on_konna_secondary">Create your own unique store now to start selling on Konna in less than 4.5 minutes.</string>
    <string name="store_name_hint">Store name (could be your name)</string>
    <string name="store_creation_disclaimer">By clicking Continue you agree to the terms and conditions of Konna and third party partners.</string>
    <string name="store_phone_hint">Phone number</string>
    <string name="store_address_hint">Address</string>
    <string name="store_description_hint">Short description</string>
    <string name="store_phone_hint_helper">Example - 08102345678</string>
    <string name="manage">Manage</string>
    <string name="update">Update</string>
    <string name="add_to_inventory">Add to inventory</string>
    <string name="zero">0</string>
    <string name="inventory">Inventory</string>
    <string name="empty_inventory_label">Oops your store is still empty</string>
    <string name="add_item_page_title">Add product</string>
    <string name="item_name_hint">Product name</string>
    <string name="item_description_hint">Describe the product</string>
    <string name="item_stock_quantity_hint">Quantity in stock</string>
    <string name="item_price_hint">Price</string>
    <string name="upload">Upload</string>
    <string name="item_category_hint">Category</string>
    <string name="item_image_hint">Select an image</string>
    <string name="content_description_item_image">Select an image for the item</string>
    <string name="uploading">uploading…</string>
    <string name="product_image">Product image</string>
    <string name="default_text">%1$s</string>
    <string name="default_text_underlined"><u>%1$s</u></string>
    <string name="create_a_store">Create a store</string>
    <string name="profile">Profile</string>
    <string name="product_image_content_description">Image of this product</string>
    <string name="seller_information">Seller information</string>
    <string name="product_name_label">The name of the product</string>
    <string name="product_completed_orders">%1$d completed orders</string>
    <string name="product_stock">%1$d in stock</string>
    <string name="available_on_demand">Available on demand</string>
    <string name="description_heading">Description</string>
    <string name="reviews_heading">Reviews</string>
    <string name="reviews_placeholder">No reviews available yet</string>
    <string name="make_order">Make order</string>
    <string name="gadgets">Gadgets</string>
    <string name="my_orders">My orders</string>
    <string name="cart_bag">Cart bag</string>
    <string name="empty_orders_list_label">Oops you have not made orders yet</string>
    <string name="store">Store</string>
    <string name="confirm_order">Confirm order</string>
    <string name="billing">Billing</string>
    <string name="proceed_with_amount"> Check out and pay $%1$d</string>
    <string name="total_charge">%1$d Units + Delivery charge of $%2$d</string>
    <string name="cost">$%1$d</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="missing_details">Missing details</string>
    <string name="billing_error_message">Some billing information seem to be missing. Please go to settings page to fill the necessary information then come back here.</string>
    <string name="completed_order">Payment successful</string>
    <string name="completed_order_message">Superb! Your order was completed successfully! Please see Orders page for details. The merchant will contact you shortly.</string>
    <string name="done">Done</string>
    <string name="failed_order">Failed payment</string>
    <string name="okay">Okay</string>
    <string name="something_went_wrong">Something went wrong in the process, please try again.</string>
    <string name="oops">Oops</string>
    <string name="please_select_an_image">Please select an image first to continue</string>
    <string name="setup_fee">Pay setup fee</string>
    <string name="continue_to_payment">Continue to payment</string>
    <string name="setup_fee_message">To start selling items on the platform, you will be charged a small token of $20. Please make the payment to continue.</string>
    <string name="setup_fee_support_message">You will be redirected to pay with Flutterwave.</string>
    <string name="withdraw_funds">Request funds</string>
    <string name="account_details">Account details</string>
    <string name="earnings">Total earnings</string>
    <string name="theme">Theme</string>
    <string name="revenue">Revenue</string>
    <string name="total_sales">Total orders and sales</string>
    <string name="dispatcher">Dispatcher</string>
    <string name="call_dispatcher">Call dispatcher</string>
    <string name="email_dispatcher">Email dispatcher</string>
    <string name="stock_helper">This will only be shown when item is low on stock</string>
    <string name="price_helper">Take note that Konna takes a percentage of this amount when you\'re paid</string>
    <string name="description_helper">Give as much description as necessary and please do not mislead customers</string>
    <string name="name_helper">Please use a simple and honest caption</string>
    <string name="completing_setup">Completing setup…</string>
    <string name="completing_setup_message">Finalizing setup process. Please contact support if this takes too long.</string>
    <string name="completed_setup_payment_message">Fantastic! Your setup fee was paid successfully. Now you can start adding items to your inventory.</string>
    <string name="store_phone_number">seller phone number</string>
    <string name="seller_email">Seller email</string>
    <string name="continue_order">Continue</string>
    <string name="cancel_order">Cancel order</string>
    <string name="dispatcher_earnings">Total dispatcher earnings</string>
    <string name="about_app_speech">A simple e-commerce app designed by Kile Jayson (kilejayson@gmail.com) for the Flutterwave developer challenge 2020.</string>
    <string name="nice">Nice</string>
    <string name="warning">Warning</string>
    <string name="phone_number_warning">A store has already been setup with your phone number. Please use another phone number to continue.</string>
    <string name="access_bank">Access Bank</string>
    <string name="duplicate_phone_number">Duplicate phone number</string>
</resources>