<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:helperText="@string/name_helper"
            android:hint="@string/item_name_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_category_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/item_category_hint">

            <AutoCompleteTextView
                android:id="@+id/item_category_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:helperText="@string/description_helper"
            android:hint="@string/item_description_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:minLines="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:helperText="@string/stock_helper"
            android:hint="@string/item_stock_quantity_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_stock_quantity_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/zero" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:helperText="@string/price_helper"
            app:prefixText="$"
            android:hint="@string/item_price_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_price_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/item_image_selector_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:visibility="gone"
            app:cardCornerRadius="3dp">

            <ImageView
                android:id="@+id/item_image_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description_item_image"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/placeholder_image" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upload_item_button"
            style="@style/SecondaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/upload" />

    </LinearLayout>

</ScrollView>