<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/store_name_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/update_store_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/store_phone_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/update_store_phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/store_address_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/update_store_address_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/store_description_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/update_store_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:minLines="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_store_button"
        style="@style/SecondaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/update" />

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/delete_store_button"-->
<!--        style="@style/DangerButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginBottom="30dp"-->
<!--        android:text="@string/delete_store"-->
<!--        android:textColor="@color/red" />-->

</LinearLayout>